--- a/build.gradle
+++ b/build.gradle
@@ -15,13 +15,17 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	runtimeOnly 'org.postgresql:postgresql'
+
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
+
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
-
 }
 
 test {
