--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-
+	compile('io.springfox:springfox-swagger2:2.9.2')
+	compile('io.springfox:springfox-swagger-ui:2.9.2')
+	compile('org.springframework.plugin:spring-plugin-core:1.2.0.RELEASE')
 	runtimeOnly 'org.postgresql:postgresql'
 
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
