--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	compile('io.springfox:springfox-swagger2:2.9.2')
+    implementation 'junit:junit:4.12'
+    compile('io.springfox:springfox-swagger2:2.9.2')
 	compile('io.springfox:springfox-swagger-ui:2.9.2')
 	compile('org.springframework.plugin:spring-plugin-core:1.2.0.RELEASE')
 	compile('com.google.guava:guava:27.0-jre')
@@ -26,9 +27,7 @@ dependencies {
 
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 test {
