--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,5 @@ spring.jpa.show-sql = true
 server.port = 8081
 
 #OpenLibrary external URL
-OpenLibraryUrl=https://openlibrary.org/api/
+#OpenLibraryUrl=https://openlibrary.org/api/
+OpenLibraryUrl=http://localhost:8089/api/
