Modified unit test according lombok changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.jpa.show-sql = true
 server.port = 8081
 
 #OpenLibrary external URL
-#OpenLibraryUrl=https://openlibrary.org/api/
-OpenLibraryUrl=http://localhost:8089/api/
+OpenLibraryUrl=https://openlibrary.org/api/
+#OpenLibraryUrl=http://localhost:8089/api/
